# astrostatistics_bicocca_2025

./: .gitignore
lectures/: L02_probability.ipynb  L03_probability.ipynb  L04_probability.ipynb  L11_bayesian.ipynb  L12_bayesian.ipynb  L13_introduction.ipynb  L14_clustering.ipynb  L15_dimensionality.ipynb  L17_regression.ipynb  L18_regression.ipynb  pyproject.toml
working/: pyproject.toml
working/src/working/: L_02_esercizi.ipynb  L_13_esercizi.ipynb  L_18_esercizi.ipynb
